--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>Leader board website</title>
        <link rel="stylesheet" href="./style.css">
-<script defer src="index.bundle.js"></script><script defer src="apicall.bundle.js"></script><script defer src="utils.bundle.js"></script><script defer src="leaderBoard.bundle.js"></script></head>
+<script defer src="mainjsfile.bundle.js"></script></head>
 <body>
    <header>
        <nav><h1>Leaderboard</h1> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
